--- a/TheNight_JustBuy/Areas/Admin/Views/Products/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Products/Index.cshtml
@@ -58,7 +58,7 @@
                                 @Html.DisplayFor(modelItem => item.ProductName)
                             </td>
                             <td>
-                                <img src="@Url.Content(item.Thumbnail)" width="150" height="100" />
+                                <img src="@Url.Content(item.Thumbnail)" width="150"/>
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Supplier.CompanyName)
