--- a/TheNight_JustBuy/Areas/Admin/Views/Administrators/Details.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Administrators/Details.cshtml
@@ -1,35 +1,19 @@
 ﻿@model TheNight_JustBuy.Models.User
 
 @{
-    ViewBag.Title = "Delete User";
-    ViewBag.Function = "Users";
-    ViewBag.ChildFunction = "Delete User";
+    ViewBag.Title = "Administrators Detail";
+    ViewBag.Function = "Administrators";
+    ViewBag.ChildFunction = "Administrators Detail";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+
 <section class="content">
     <div class="card">
         <div class="card-header">
-            <div class="row">
-                <div class="col-sm-8">
-                    <h1 style="font-weight:bold; font-size:25px" class="card-title">Are you sure you want to delete this?</h1>
-                </div>
+            <h1 style="font-weight:bold; font-size:25px;" class="card-title">Detail of Administrator</h1>
 
-                <div class="col-sm-2">
-                    @using (Html.BeginForm())
-                    {
-                        @Html.AntiForgeryToken()
-
-                        <div class="form-actions no-color">
-                            <div class="card-tools">
-                                <input type="submit" value="Delete" class="btn btn-block btn-secondary float-right btn-danger" />
-                            </div>
-                        </div>
-                    }
-                </div>
-
-                <div class="card-tools col-sm-2">
-                    <a class="btn btn-block btn-secondary float-right" href="~/Admin/Users">Cancel</a>
-                </div>
+            <div class="card-tools">
+                <a class="btn btn-block btn-secondary float-right" href="~/Admin/Administrators">Back to List</a>
             </div>
         </div>
         <div class="card-body">
@@ -37,6 +21,7 @@
                 <div class="col-12 col-md-12 col-lg-12 order-12 order-md-12">
                     <div class="row">
                         <div class="col-12">
+
                             <div class="post">
                                 <div class="col-sm-2 user-block">
                                     <strong>@Html.DisplayNameFor(model => model.UserID)</strong>:
@@ -162,6 +147,7 @@
                                     <span class="badge badge-success">Customer</span>
                                 }
                             </div>
+
                         </div>
                     </div>
                 </div>
@@ -170,3 +156,4 @@
         </div>
     </div>
 </section>
+
