--- a/TheNight_JustBuy/Areas/Admin/Views/Administrators/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Administrators/Index.cshtml
@@ -2,8 +2,8 @@
 
 
 @{
-    ViewBag.Title = "Manage Users";
-    ViewBag.Manage = "Manage User";
+    ViewBag.Title = "Manage Administrators";
+    ViewBag.Manage = "Manage Administrators";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     string isChecked = "";
 }
@@ -12,9 +12,9 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Data of Users</h3>
+                <h3 class="card-title">Data of Administrators</h3>
                 <p>
-                    <a class="btn btn-success btn-sm float-right" href="~/Admin/Users/Create">
+                    <a class="btn btn-success btn-sm float-right" href="~/Admin/Administrators/Create">
                         <i class="fas fa-plus">
                         </i>
                         Create New
@@ -113,22 +113,22 @@
                             </td>
 
                             <td class="project-actions text-right">
-                                <a class="btn btn-dark btn-sm btn-block" href="~/Admin/Users/Address/@item.UserID">
+                                <a class="btn btn-dark btn-sm btn-block" href="~/Admin/Administrators/Address/@item.UserID">
                                     <i class="fas fa-address-book">
                                     </i>
                                     Address
                                 </a>
-                                <a class="btn btn-primary btn-sm btn-block" href="~/Admin/Users/Details/@item.UserID">
+                                <a class="btn btn-primary btn-sm btn-block" href="~/Admin/Administrators/Details/@item.UserID">
                                     <i class="fas fa-eye">
                                     </i>
                                     View
                                 </a>
-                                <a class="btn btn-info btn-sm btn-block" href="~/Admin/Users/Edit/@item.UserID">
+                                <a class="btn btn-info btn-sm btn-block" href="~/Admin/Administrators/Edit/@item.UserID">
                                     <i class="fas fa-pencil-alt">
                                     </i>
                                     Edit
                                 </a>
-                                <a class="btn btn-danger btn-sm btn-block" href="~/Admin/Users/Delete/@item.UserID">
+                                <a class="btn btn-danger btn-sm btn-block" href="~/Admin/Administrators/Delete/@item.UserID">
                                     <i class="fas fa-trash">
                                     </i>
                                     Delete
