--- a/TheNight_JustBuy/Areas/Admin/Views/ProductComments/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/ProductComments/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model IEnumerable<TheNight_JustBuy.Models.OrderDetail>
+﻿@model IEnumerable<TheNight_JustBuy.Models.ProductComment>
 
 @{
-    ViewBag.Title = "Manage Order Details";
-    ViewBag.Manage = "Manage Order Details";
+    ViewBag.Title = "Manage Product Comments";
+    ViewBag.Manage = "Manage Product Comments";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
@@ -10,18 +10,14 @@
     <div class="container-fluid">
         <div class="card">
             <div class="card-header">
-                <h3 class="card-title">Data of Order Details</h3>
-                <div class="card-tools">
-                    <a class="btn btn-block btn-secondary float-right" href="~/Admin/Orders">Back to List</a>
-                </div>
-
+                <h3 class="card-title">Data of Product Comments</h3>
             </div>
             <div class="card-body">
-                <table id="tbl_OrderDetail" class="table table-bordered table-striped">
+                <table id="ProductCommentTable" class="table table-bordered table-striped">
                     <thead>
                         <tr>
                             <th>
-                                @Html.DisplayNameFor(model => model.OrderID)
+                                @Html.DisplayNameFor(model => model.User.Username)
                             </th>
                             <th>
                                 Full name
@@ -32,14 +28,9 @@
                             <th>
                                 @Html.DisplayNameFor(model => model.Product.Thumbnail)
                             </th>
-
                             <th>
-                                @Html.DisplayNameFor(model => model.UnitPrice)
+                                @Html.DisplayNameFor(model => model.CommentedDate)
                             </th>
-                            <th>
-                                @Html.DisplayNameFor(model => model.Quantity)
-                            </th>
-
                             <th></th>
                         </tr>
                     </thead>
@@ -48,26 +39,35 @@
                         {
                         <tr>
                             <td>
-                                @Html.DisplayFor(modelItem => item.OrderID)
+                                @Html.DisplayFor(modelItem => item.User.Username)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.Order.User.FirstName) @Html.DisplayFor(modelItem => item.Order.User.LastName)
+                                @Html.DisplayFor(modelItem => item.User.FirstName) @Html.DisplayFor(modelItem => item.User.LastName)
                             </td>
-
                             <td>
                                 @Html.DisplayFor(modelItem => item.Product.ProductName)
                             </td>
                             <td>
-                                <img src="@Url.Content(item.Product.Thumbnail)" width="150" />
+                                <img src="@Url.Content(item.Product.Thumbnail)"  width="150"/>
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.UnitPrice)
+                                @Html.DisplayFor(modelItem => item.CommentedDate)
                             </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.Quantity)
+
+                            <td class="project-actions text-right">
+                                <a class="btn btn-primary btn-sm" href="~/Admin/ProductComments/Details/@item.ProductCommentID">
+                                    <i class="fas fa-eye">
+                                    </i>
+                                    View
+                                </a><a class="btn btn-danger btn-sm" href="~/Admin/ProductComments/Delete/@item.ProductCommentID">
+                                    <i class="fas fa-trash">
+                                    </i>
+                                    Delete
+                                </a>
                             </td>
                         </tr>
                         }
+
                     </tbody>
                 </table>
             </div>
@@ -79,10 +79,9 @@
 {
     @Styles.Render("~/asset/css/datatable")
     @Scripts.Render("~/asset/scripts/datatable")
-    <script src="~/Asset/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-    <script src="~/Asset/ajaxChangeSatus/coupons.js"></script>
+    <script src="~/Asset/ajaxChangeSatus/blogComment.js"></script>
     <script>
-        $("#tbl_OrderDetail").DataTable({
+        $("#ProductCommentTable").DataTable({
             "responsive": true,
             "autoWidth": false,
             "dom": '<"pull-left"B><"pull-right"f>rt<"row"<"col-sm-4"l><"col-sm-4"i><"col-sm-4"p>>',
@@ -118,14 +117,13 @@
                     className: 'btn btn-info btn-sm'
                 }
             ],
-            "lengthMenu": [[10, 25, 50, 100, -1], [10, 25, 50, 100, "All"]],
+            "lengthMenu": [[5, 10, 25, 50, 100, -1], [5, 10, 25, 50, 100, "All"]],
             "aoColumns": [
                 null,
                 null,
                 null,
                 null,
-                null,
-                null
+                { "width": "15%", "targets": 0 }
             ]
         });
     </script>
