--- a/TheNight_JustBuy/Areas/Admin/Views/Products/Create.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Products/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheNight_JustBuy.Models.Product
+﻿@model TheNight_JustBuy.Areas.Admin.Models.ProductModelForCreate
 
 @{
     ViewBag.Title = "Create Product";
