--- a/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
@@ -10,7 +10,7 @@
                 <img src="@Url.Content(ViewBag.Avatar)" class="img-circle elevation-2" alt="Admin Avatar" />
             </div>
             <div class="info">
-                <a href="~/admin/profile" class="d-block">@ViewBag.FullName</a>
+                <a href="~/Admin/AdminProfile" class="d-block">@ViewBag.FullName</a>
             </div>
         </div>
 
