Blog all, Product loại, chi tiet

--- a/TheNight_JustBuy/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Categories/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheNight_JustBuy.Models.Category
+﻿@model TheNight_JustBuy.Areas.Admin.Models.CategoryModelForEdit
 
 @{
     ViewBag.Title = "Edit Category";
