--- a/TheNight_JustBuy/Areas/Admin/Views/Categories/Create.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model TheNight_JustBuy.Models.Category
+﻿@model TheNight_JustBuy.Areas.Admin.Models.CategoryModelForCreate
 
 @{
     ViewBag.Title = "Create Category";
