--- a/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Shared/Aside.cshtml
@@ -1,7 +1,6 @@
 ﻿<aside class="main-sidebar sidebar-dark-primary elevation-4">
-    <a href="~/admin" class="brand-link">
-        <img src="~/Content/dashboard/images/logo-mobile.png" alt="" class="brand-image img-circle elevation-3" style="opacity: .8" />
-        <span class="brand-text font-weight-light">Admin Dashboard</span>
+    <a href="~/admin" class="brand-link" style="text-align: center" >
+        <img src="~/Content/clients/images/justbuy-logo/logo_justbuy_L.gif" width="150"/>
     </a>
 
     <div class="sidebar">
