--- a/TheNight_JustBuy/Areas/Admin/Views/AdminProfile/Index.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/AdminProfile/Index.cshtml
@@ -47,6 +47,9 @@
                                 <b>Email</b> <a class="float-right">@user.Email</a>
                             </li>
                             <li class="list-group-item">
+                                <b>Credit Card</b> <a class="float-right">@user.CreditCard</a>
+                            </li>
+                            <li class="list-group-item">
                                 <b>Role</b> <a class="float-right">
                                     @{
                                         if (user.Role == true)
@@ -79,11 +82,11 @@
                                 @using (Html.BeginForm("Index", "AdminProfile", FormMethod.Post, new { enctype = "multipart/form-data" }))
                                 {
                                     @Html.AntiForgeryToken()
+                                    
                                     <div class="form-horizontal">
                                         <div class="card-body">
                                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                            @Html.HiddenFor(model => model.Username)
-
+                                            @Html.HiddenFor(model => model.UserID)
                                             <div class="form-group row">
                                                 @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
                                                 <div class="col-md-10">
@@ -137,6 +140,14 @@
                                             </div>
 
                                             <div class="form-group row">
+                                                @Html.LabelFor(model => model.CreditCard, htmlAttributes: new { @class = "control-label col-md-2" })
+                                                <div class="col-md-10">
+                                                    @Html.EditorFor(model => model.CreditCard, new { htmlAttributes = new { @class = "form-control", @placeholder = "Enter Phone Number" } })
+                                                    @Html.ValidationMessageFor(model => model.CreditCard, "", new { @class = "text-danger" })
+                                                </div>
+                                            </div>
+
+                                            <div class="form-group row">
                                                 @Html.LabelFor(model => model.Avatar, htmlAttributes: new { @class = "col-sm-2 col-form-label" })
                                                 <div class="col-sm-10">
                                                     <div class="custom-file">
@@ -180,17 +191,13 @@
                                             <div id="notice_success"></div>
                                         </div>
                                     </div>
-
                                     <div class="form-group row">
                                         <div class="col-sm-2">
                                             <button type="submit" class="btn btn-success">Save</button>
                                         </div>
                                     </div>
                                 </form>
-
-
                             </div>
-
                         </div>
                     </div>
                 </div>
