--- a/TheNight_JustBuy/Areas/Admin/Views/Blogs/Create.cshtml
+++ b/TheNight_JustBuy/Areas/Admin/Views/Blogs/Create.cshtml
@@ -50,7 +50,7 @@
                                 <div class="form-group row">
                                     @Html.Label("Category", htmlAttributes: new { @class = "control-label col-md-2" })
                                     <div class="col-md-10">
-                                        @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control select2", @style = "width: 100%;" })
+                                        @Html.DropDownList("CategoryID", null, htmlAttributes: new { @class = "form-control", @style = "width: 100%;" })
                                         @Html.ValidationMessageFor(model => model.CategoryID, "", new { @class = "text-danger" })
                                     </div>
                                 </div>
@@ -98,13 +98,10 @@
 {
     @Styles.Render("~/asset/css/form")
     @Scripts.Render("~/asset/scripts/form")
-    @Styles.Render("~/asset/css/select2")
-    @Scripts.Render("~/asset/scripts/select2")
     <script>
-        $(function () {
-            $('#summernote').summernote()
-            $('.select2').select2()
-        })
+            $(function () {
+                $('#summernote').summernote()
+            })
 
     </script>
 }
