--- a/TheNight_JustBuy/Views/Login/Index.cshtml
+++ b/TheNight_JustBuy/Views/Login/Index.cshtml
@@ -60,7 +60,7 @@
                                 <li>Track new orders</li>
                                 <li>Save items to your Wishlist</li>
                             </ul>
-                            <a href="#" class="btn btn-bold">Create an account</a>
+                            <a href="@Url.Action("Index", "Register")" class="btn btn-bold">Create an account</a>
                         </div>
                     </div>
                 </div>
