--- a/TheNight_JustBuy/Views/Cart/CheckOut.cshtml
+++ b/TheNight_JustBuy/Views/Cart/CheckOut.cshtml
@@ -4,73 +4,55 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<!--Hero Section-->
+
 <div class="hero-section hero-background">
-    <h1 class="page-title">Organic Fruits</h1>
+    <h1 class="page-title">JustBuy</h1>
 </div>
 
-<!--Navigation section-->
 <div class="container">
     <nav class="biolife-nav">
         <ul>
-            <li class="nav-item"><a href="index-2.html" class="permal-link">Home</a></li>
-            <li class="nav-item"><span class="current-page">ShoppingCart</span></li>
+            <li class="nav-item"><a href="@Url.Action("Index", "Home")" class="permal-link">Home</a></li>
+            <li class="nav-item"><a href="@Url.Action("Index", "Cart")" class="permal-link">ShoppingCart</a></li>
+            <li class="nav-item"><span class="current-page">Checkout</span></li>
         </ul>
     </nav>
 </div>
 
 <div class="page-contain checkout">
-
-    <!-- Main content -->
     <div id="main-content" class="main-content">
         <div class="container sm-margin-top-37px">
             <div class="row">
-
-                <!--checkout progress box-->
                 <div class="col-lg-7 col-md-7 col-sm-6 col-xs-12">
                     <div class="checkout-progress-wrap">
                         <ul class="steps">
                             <li class="step 1st">
                                 <div class="checkout-act active">
-                                    <h3 class="title-box"><span class="number">1</span>Customer</h3>
+                                    <h3 class="title-box"><span class="number">*</span>Customer</h3>
                                     <div class="box-content">
-                                        <p class="txt-desc">Checking out as a <a class="pmlink" href="#">Guest?</a> You’ll be able to save your details to create an account with us later.</p>
                                         <div class="login-on-checkout">
-                                            <form action="#" name="frm-login" method="post">
+                                            @using (Html.BeginForm("CheckOut", "Cart", FormMethod.Post))
+                                            {
                                                 <p class="form-row">
-                                                    <label for="input_email">Email Address</label>
+                                                    <label for="input_email">Note</label>
                                                     <input type="email" name="email" id="input_email" value="" placeholder="Your email">
-                                                    <button type="submit" name="btn-sbmt" class="btn">Continue As Guest</button>
+                                                    @Html.Editor("Note", new { htmlAttributes = new { @placeholder = "Enter your note" } })
+                                                    <button type="submit" name="btn-sbmt" class="btn">Checkout</button>
                                                 </p>
-                                                <p class="form-row">
-                                                    <input type="checkbox" name="subcribe" id="input_subcribe">
-                                                    <label for="input_subcribe">Subscribe to our newsletter</label>
-                                                </p>
-                                                <p class="msg">Already have an account? <a href="#" class="link-forward">Sign in now</a></p>
-                                            </form>
+                                            }
                                         </div>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="step 2nd">
-                                <div class="checkout-act"><h3 class="title-box"><span class="number">2</span>Shipping</h3></div>
-                            </li>
-                            <li class="step 3rd">
-                                <div class="checkout-act"><h3 class="title-box"><span class="number">3</span>Billing</h3></div>
-                            </li>
-                            <li class="step 4th">
-                                <div class="checkout-act"><h3 class="title-box"><span class="number">4</span>Payment</h3></div>
                             </li>
                         </ul>
                     </div>
                 </div>
 
-                <!--Order Summary-->
                 <div class="col-lg-5 col-md-5 col-sm-6 col-xs-12 sm-padding-top-48px sm-margin-bottom-0 xs-margin-bottom-15px">
                     <div class="order-summary sm-margin-bottom-80px">
                         <div class="title-block">
                             <h3 class="title">Order Summary</h3>
-                            <a href="#" class="link-forward">Edit cart</a>
+                            <a href="@Url.Action("Index", "Cart")" class="link-forward">Edit cart</a>
                         </div>
                         <div class="cart-list-box short-type">
                             <span class="number">2 items</span>
