--- a/TheNight_JustBuy/Views/Shared/FooterClient.cshtml
+++ b/TheNight_JustBuy/Views/Shared/FooterClient.cshtml
@@ -1,4 +1,10 @@
-﻿<!-- FOOTER -->
+﻿@{
+    var fcategoryList = (List<TheNight_JustBuy.Models.Category>)ViewBag.FCategoryList;
+    var fblogCategoryList = (List<TheNight_JustBuy.Models.BlogCategory>)ViewBag.FBlogCategoryList;
+
+
+}
+<!-- FOOTER -->
 <footer id="footer" class="footer layout-01">
     <div class="footer-content background-footer-03">
         <div class="container">
@@ -6,28 +12,30 @@
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-xs-12">
                     <section class="footer-item">
-                        <a href="home-01.html" class="logo footer-logo"><img src="clients/images/logo-biolife-1.png" alt="biolife logo" width="135" height="34"></a>
+                        <a href="home-01.html" class="logo footer-logo">
+                            <img src="~/Content/clients/images/justbuy-logo/logo_justbuy_L.gif" />
+                        </a>
                         <div class="footer-phone-info mode-03">
                             <i class="biolife-icon icon-head-phone"></i>
                             <p class="r-info">
                                 <span>Got Questions ?</span>
-                                <span class="number">(700)  9001-1909  (900) 689 -66</span>
+                                <span class="number">+84 292 383 5581</span>
                             </p>
                         </div>
                         <div class="contact-info-block footer-layout simple-info">
                             <h4 class="title">Contact info</h4>
                             <div class="info-item">
                                 <img src="clients/images/location-icon.png" width="22" height="26" alt="" class="icon">
-                                <p class="desc">7563 St. Vicent Place, Glasgow, Greater Newyork NH7689, UK </p>
+                                <p class="desc">01 Ly Tu Trong, Ninh Kieu district, Can Tho city </p>
                             </div>
                         </div>
                         <div class="biolife-social inline circle-hover">
                             <ul class="socials">
-                                <li><a href="#" title="twitter" class="socail-btn"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                <li><a href="#" title="facebook" class="socail-btn"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                <li><a href="#" title="pinterest" class="socail-btn"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                                <li><a href="#" title="youtube" class="socail-btn"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                                <li><a href="#" title="instagram" class="socail-btn"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                <li><a href="https://twitter.com" title="twitter" class="socail-btn"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                                <li><a href="https://facebook.com" title="facebook" class="socail-btn"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                <li><a href="https://pinterest.com" title="pinterest" class="socail-btn"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                                <li><a href="https://youtube.com" title="youtube" class="socail-btn"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                                <li><a href="https://instagram.com" title="instagram" class="socail-btn"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
                     </section>
@@ -44,22 +52,20 @@
                                         <li><a href="#">My Wishlist</a></li>
                                         <li><a href="#">Track My Order</a></li>
                                         <li><a href="#">Help</a></li>
-                                        <li><a href="#">Our Blog</a></li>
+                                        <li><a href="">Our Blog</a></li>
                                     </ul>
                                 </div>
                             </section>
                         </div>
                         <div class="col-lg-4 col-sm-4 col-xs-12 md-margin-top-6px xs-margin-top-40px">
                             <section class="footer-item">
-                                <h3 class="section-title">Why Buy From Us</h3>
+                                <h3 class="section-title">Products</h3>
                                 <div class="wrap-custom-menu vertical-menu-2">
                                     <ul class="menu">
-                                        <li><a href="#">Shipping & Returns</a></li>
-                                        <li><a href="#">Secure Shopping</a></li>
-                                        <li><a href="#">International Shipping</a></li>
-                                        <li><a href="#">Affiliates</a></li>
-                                        <li><a href="#">Group Sales</a></li>
-                                        <li><a href="#">Shipping & Returns</a></li>
+                                        @foreach (var item in fcategoryList)
+                                        {
+                                            <li><a href="@Url.Action("Index", "Items", new { id = item.CategoryID })">@item.CategoryName</a></li>
+                                        }
                                     </ul>
                                 </div>
                             </section>
@@ -84,46 +90,11 @@
                 </div>
             </div>
 
-            <div class="footer-midle-pst">
-                <div class=" newsletter-block layout-04">
-                    <div class="wrap-title">
-                        <span class="biolife-icon icon-newsletter"></span>
-                        <div class="texts">
-                            <h3 class="newslt-title">Sign up for our newsletter</h3>
-                            <p class="sub-title">Sign up our Newsletter for Exclusive Discount codes</p>
-                        </div>
-                    </div>
-                    <div class="form-content">
-                        <form action="#" name="new-letter-foter" method="post">
-                            <input type="email" class="input-text email" value="" placeholder="Your email here...">
-                            <button type="submit" class="bnt-submit" name="ok">Sign up</button>
-                        </form>
-                    </div>
-                </div>
-            </div>
+            
 
         </div>
 
-        <div class="copy-rights-contain">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="copy-right-text"><p><a href="templateshub.net">Templates Hub</a></p></div>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                        <div class="payment-methods">
-                            <ul>
-                                <li><a href="#" class="payment-link"><img src="clients/images/card1.jpg" width="51" height="36" alt=""></a></li>
-                                <li><a href="#" class="payment-link"><img src="clients/images/card2.jpg" width="51" height="36" alt=""></a></li>
-                                <li><a href="#" class="payment-link"><img src="clients/images/card3.jpg" width="51" height="36" alt=""></a></li>
-                                <li><a href="#" class="payment-link"><img src="clients/images/card4.jpg" width="51" height="36" alt=""></a></li>
-                                <li><a href="#" class="payment-link"><img src="clients/images/card5.jpg" width="51" height="36" alt=""></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        
 
     </div>
 </footer>
@@ -195,8 +166,6 @@
 </div>
 
 <!--Newletter Popup-->
-
-
 <!--Quickview Popup-->
 <div id="biolife-quickview-block" class="biolife-quickview-block">
     <div class="quickview-container">
@@ -273,11 +242,11 @@
                     <div class="biolife-social inline add-title">
                         <span class="fr-title">Share:</span>
                         <ul class="socials">
-                            <li><a href="#" title="twitter" class="socail-btn"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                            <li><a href="#" title="facebook" class="socail-btn"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                            <li><a href="#" title="pinterest" class="socail-btn"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                            <li><a href="#" title="youtube" class="socail-btn"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
-                            <li><a href="#" title="instagram" class="socail-btn"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com" title="twitter" class="socail-btn"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="https://facebook.com" title="facebook" class="socail-btn"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="https://pinterest.com" title="pinterest" class="socail-btn"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                            <li><a href="https://youtube.com" title="youtube" class="socail-btn"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                            <li><a href="https://instagram.com" title="instagram" class="socail-btn"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
                         </ul>
                     </div>
                 </div>
