--- a/TheNight_JustBuy/Views/Home/About.cshtml
+++ b/TheNight_JustBuy/Views/Home/About.cshtml
@@ -26,168 +26,21 @@
 
         <div class="welcome-us-block">
             <div class="container">
-                <h4 class="title">Welcome to Biolife store!</h4>
+                <h4 class="title">Welcome to Just Buy!</h4>
                 <div class="text-wraper">
-                    <p class="text-info">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur,</p>
-                    <p class="qt-text">“There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.”</p>
-                </div>
-            </div>
-        </div>
+                    <p class="text-info">
+                        For the last ten years, ’Just Buy’ has been that specialize in producing camera phones, whereas innovating mobile photography technology breakthroughs.
 
-        <div class="why-choose-us-block">
-            <div class="container">
-                <h4 class="box-title">Why Choose us</h4>
-                <b class="subtitle">Natural food is taken from the world's most modern farms with strict safety cycles</b>
-                <div class="showcase">
-                    <div class="sc-child sc-left-position">
-                        <ul class="sc-list">
-                            <li>
-                                <div class="sc-element color-01">
-                                    <span class="biolife-icon icon-fresh-drink"></span>
-                                    <div class="txt-content">
-                                        <span class="number">01</span>
-                                        <b class="title">Always Fresh</b>
-                                        <p class="desc">Natural products are kept in the best condition to ensure always fresh</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="sc-element color-02">
-                                    <span class="biolife-icon icon-healthy-about"></span>
-                                    <div class="txt-content">
-                                        <span class="number">02</span>
-                                        <b class="title">Overall Healthy</b>
-                                        <p class="desc">Natural products are kept in the best condition to ensure always fresh</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="sc-element color-03">
-                                    <span class="biolife-icon icon-green-safety"></span>
-                                    <div class="txt-content">
-                                        <span class="number">03</span>
-                                        <b class="title">Encironmental Safety</b>
-                                        <p class="desc">Natural products are kept in the best condition to ensure always fresh</p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <div class="sc-child sc-center-position">
-                        <figure><img src="assets/images/about-us/bn04.jpg" alt="" width="622" height="656"></figure>
-                    </div>
-                    <div class="sc-child sc-right-position">
-                        <ul class="sc-list">
-                            <li>
-                                <div class="sc-element color-04">
-                                    <span class="biolife-icon icon-capacity-about"></span>
-                                    <div class="txt-content">
-                                        <span class="number">04</span>
-                                        <b class="title">Antioxidant Capacity</b>
-                                        <p class="desc">Natural products are kept in the best condition to ensure always fresh</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="sc-element color-05">
-                                    <span class="biolife-icon icon-arteries-about"></span>
-                                    <div class="txt-content">
-                                        <span class="number">05</span>
-                                        <b class="title">Good For Arteries</b>
-                                        <p class="desc">Natural products are kept in the best condition to ensure always fresh</p>
-                                    </div>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="sc-element color-06">
-                                    <span class="biolife-icon icon-title"></span>
-                                    <div class="txt-content">
-                                        <span class="number">06</span>
-                                        <b class="title">Quality Standards</b>
-                                        <p class="desc">Natural products are kept in the best condition to ensure always fresh</p>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+                        </br></br>Just Buy started the age of selfie change of state, and was the primary whole to launch smartphones with 5MP and 16MP front cameras.
 
-        <div class="testimonial-block">
-            <div class="container">
-                <h4 class="box-title">Testimonial</h4>
-                <ul class="testimonial-list biolife-carousel" data-slick='{"arrows":false,"dots":true,"infinite":false,"speed":400,"slidesMargin":30,"slidesToShow":3, "responsive":[{"breakpoint":1200, "settings":{ "slidesToShow": 3}},{"breakpoint":992, "settings":{ "slidesToShow": 2}},{"breakpoint":768, "settings":{ "slidesToShow": 2}},{"breakpoint":500, "settings":{ "slidesToShow": 1}}]}'>
-                    <li>
-                        <div class="testml-elem">
-                            <div class="avata">
-                                <figure><img src="assets/images/about-us/author-01.png" alt="" width="217" height="217"></figure>
-                            </div>
-                            <p class="desc">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-                            <b class="name">Ms. Jay Doe</b>
-                            <b class="title">Manager, Mycrosoft co.</b>
-                            <div class="rating"><p class="star-rating"><span class="width-80percent"></span></p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="testml-elem">
-                            <div class="avata">
-                                <figure><img src="assets/images/about-us/author-02.png" alt="" width="217" height="217"></figure>
-                            </div>
-                            <p class="desc">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-                            <b class="name">Mr. Braun</b>
-                            <b class="title">Sales Manager</b>
-                            <div class="rating"><p class="star-rating"><span class="width-90percent"></span></p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="testml-elem">
-                            <div class="avata">
-                                <figure><img src="assets/images/about-us/author-03.png" alt="" width="217" height="217"></figure>
-                            </div>
-                            <p class="desc">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-                            <b class="name">Ms. Danien</b>
-                            <b class="title">Marketing</b>
-                            <div class="rating"><p class="star-rating"><span class="width-100percent"></span></p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="testml-elem">
-                            <div class="avata">
-                                <figure><img src="assets/images/about-us/author-01.png" alt="" width="217" height="217"></figure>
-                            </div>
-                            <p class="desc">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-                            <b class="name">Ms. Jay Doe</b>
-                            <b class="title">Manager, Mycrosoft co.</b>
-                            <div class="rating"><p class="star-rating"><span class="width-80percent"></span></p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="testml-elem">
-                            <div class="avata">
-                                <figure><img src="assets/images/about-us/author-02.png" alt="" width="217" height="217"></figure>
-                            </div>
-                            <p class="desc">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-                            <b class="name">Mr. Braun</b>
-                            <b class="title">Sales Manager</b>
-                            <div class="rating"><p class="star-rating"><span class="width-90percent"></span></p></div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="testml-elem">
-                            <div class="avata">
-                                <figure><img src="assets/images/about-us/author-03.png" alt="" width="217" height="217"></figure>
-                            </div>
-                            <p class="desc">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text.</p>
-                            <b class="name">Ms. Danien</b>
-                            <b class="title">Marketing</b>
-                            <div class="rating"><p class="star-rating"><span class="width-100percent"></span></p></div>
-                        </div>
-                    </li>
-                </ul>
+                        </br></br>Just Buy was conjointly the primary whole to introduce the motorized rotating camera, the immoderate HD feature and also the 5x twin Camera Zoom technology.
+
+                        </br></br>In 2017, ’Just Buy’ was graded because the range four smartphone whole globally, consistent with IDC. And today,’Just Buy’ provides glorious smartphone photography experiences to over two hundred million tykes round the world.
+                    </p>
+                    <p class="qt-text">“Just Buy - Technology for Life - Good Products to Buy.”</p>
+                </div>
             </div>
         </div>
     </div>
-
 </div>
 
