--- a/TheNight_JustBuy/Views/Shared/HeaderClient.cshtml
+++ b/TheNight_JustBuy/Views/Shared/HeaderClient.cshtml
@@ -91,7 +91,7 @@
                                 <span class="line-2"></span>
                                 <span class="line-3"></span>
                             </span>
-                            <span class="menu-title">All departments</span>
+                            <span class="menu-title">All Categories</span>
                             <span class="angle" data-tgleclass="fa fa-caret-down"><i class="fa fa-caret-up" aria-hidden="true"></i></span>
                         </div>
                         <div class="wrap-menu">
